code/monitoring/k8s/base.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    system: scalable-ecommerce-platform
    name: prometheus
    app: prometheus
    role: monitoring
    app.kubernetes.io/part-of: monitoring
    app.openshift.io/runtime: prometheus
  annotations:
    app.openshift.io/connects-to: ui-super-heroes,rest-fights,rest-villains,rest-heroes,event-statistics,apicurio
spec:
  replicas: 1
  selector:
    matchLabels:
      name: prometheus
  template:
    metadata:
      labels:
        system: scalable-ecommerce-platform
        name: prometheus
        app: prometheus
        role: monitoring
    spec:
      containers:
        - image: quay.io/prometheus/prometheus:v3.1.0
          name: prometheus
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus
            - name: prometheus-data
              mountPath: /prometheus
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
      volumes:
        - name: prometheus-data
          emptyDir: { }
        - name: prometheus-config
          configMap:
            name: prometheus-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    system: scalable-ecommerce-platform
    name: jaeger
    app: jaeger
    role: monitoring
    app.kubernetes.io/part-of: monitoring
    app.openshift.io/runtime: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jaeger
  template:
    metadata:
      labels:
        system: scalable-ecommerce-platform
        name: jaeger
        app: jaeger
        role: monitoring
    spec:
      containers:
        - image: jaegertracing/all-in-one:1
          name: jaeger
          ports:
            - containerPort: 16686
            - containerPort: 14268
            - containerPort: 14250
            - containerPort: 4317
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  labels:
    system: scalable-ecommerce-platform
    name: otel-collector
    app: otel-collector
    role: monitoring
    app.kubernetes.io/part-of: monitoring
    app.openshift.io/runtime: opentelemetry
  annotations:
    app.openshift.io/connects-to: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      name: otel-collector
  template:
    metadata:
      labels:
        system: scalable-ecommerce-platform
        name: otel-collector
        app: otel-collector
        role: monitoring
    spec:
      containers:
        - image: otel/opentelemetry-collector:0.119.0
          name: otel-collector
          args:
            - "--config=/conf/otel-collector-config.yml"
          ports:
            - name: otlp-receiver
              containerPort: 4317
          volumeMounts:
            - name: otel-collector-config
              mountPath: /conf
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
      volumes:
        - name: otel-collector-config
          configMap:
            name: otel-collector-config
