code/monitoring/k8s/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    name: prometheus
    system: scalable-ecommerce-platform
    app: prometheus
    role: monitoring
spec:
  ports:
    - port: 9090
      name: scrape
      protocol: TCP
      targetPort: 9090
  selector:
    name: prometheus
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    name: jaeger
    system: scalable-ecommerce-platform
    app: jaeger
    role: monitoring
spec:
  ports:
    - port: 16686
      name: ui
      protocol: TCP
      targetPort: 16686
    - port: 14268
      name: thrift
      protocol: TCP
      targetPort: 14268
    - port: 14250
      name: grpc
      protocol: TCP
      targetPort: 14250
    - port: 4317
      name: otel
      protocol: TCP
      targetPort: 4317
  selector:
    name: jaeger
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  labels:
    name: otel-collector
    system: scalable-ecommerce-platform
    app: otel-collector
    role: monitoring
spec:
  ports:
    - port: 4317
      name: grpc
      protocol: TCP
      targetPort: 4317
  selector:
    name: otel-collector
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
    system: scalable-ecommerce-platform
    name: prometheus
    app: prometheus
    role: monitoring
  name: prometheus
spec:
  port:
    targetPort: 9090
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: prometheus
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/part-of: monitoring
    system: scalable-ecommerce-platform
    name: jaeger
    app: jaeger
    role: monitoring
  name: jaeger
spec:
  port:
    targetPort: 16686
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jaeger
